--- a/cdn/src/02_jsx문법.html
+++ b/cdn/src/02_jsx문법.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,15 @@
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.28.4/babel.min.js"></script>
 </head>
+
 <body>
     <div id="root"></div>
-    
-    <script type="" src="/cdn/src/App.js"></script>
-    <script type="" src="/cdn/src/index.js"></script>
+    <script type="text/babel">
+        // JSX
+        const element = <h1>Hello, world!</h1>;  // 올바름
+        const img = <img src="logo.png" />;      // 반드시 self-closing
+        const root = reactDOM.createRoot(document.querySelector)
+    </script>
 </body>
+
 </html>
