--- a/cdn/public/index copy.html
+++ b/cdn/public/index copy.html
@@ -3,23 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>리액트 CDN으로 시작하기</title>
 </head>
 <body>
+    <!-- 2. 최상위(루트) 태그 -->
     <div id="root"></div>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <!-- 1. 리액트 라이브러리 -->
+    <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <!-- 리액트DOM 라이브러리 -->
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+    <!-- 바벨 라이브러리 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.28.4/babel.min.js"></script>
-      <!-- React 코드 작성 영역 -->
+
+    <!-- 3. React 코드 작성 영역 -->
     <script type="text/babel">
       // 함수형 컴포넌트 정의
-      function App2() {
-        return <h1>Hello, React CDN!</h1>;
+      function App() {
+        // JSX를 반환 => 화면에 렌더링될 내용
+        return <h1>Hello3</h1>;
       }
 
-      // ReactDOM을 통해 App 컴포넌트를 root에 렌더링
+      // createRoot(루트객체)
+      //  - 리액트 18버전에서 새롭게 추가된 기능으로,
+      //  - 리액트 애플리케이션의 루트 DOM 노드를 생성하는 역할
       const root = ReactDOM.createRoot(document.getElementById('root'));
-      root.render(<App2 />);
-       </script>
+      // render(XML요소)
+      //  - 리액트 컴포넌트를 렌더링 -> render 메서드 인자를 루트에 전달한다.
+      // <App /> -> 리액트 컴포넌트 호출
+      root.render(<App />);
+    </script>
 </body>
 </html>
